# dat2npy

./: .copier-answers.yml  README.md  pyproject.toml
src/dat2npy/: constants.py  dat.py  dat_utils.py  types.py
src/dat2npy/cli/: convert_file.py  create_dataset.py
