[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "dat2npy"
authors = [
    {name = "Ruslan Smirnov"},
    {name = "Anton Rybkin"},
]
description = "Set of scripts to convert .dat files to .npy (also labels for dataset generation)"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "dat2npy[test]",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
convert_file = "dat2npy.cli.convert_file:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/"]
exclude = '''(?x)^(
    .git/|
    .venv/|
    venv/|
  )$'''

[tool.ruff]
select = ["E", "F", "Q", "B"]
src = ["src", "tests"]
show-source = true
show-fixes=true

[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true
